# light-blue-tts-sapi

./: --text  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deploy-current-release.ps1  deploy.ps1  dev-deploy-copy-only.ps1  dev-deploy-models.ps1  dev-deploy-now.ps1  dev-deploy-sapi.ps1
.github/workflows/: build.yml  release-models.yml  release-ort-cuda.yml  release-ort-gpu.yml  release-ort-openvino.yml
docs/: backbone-onnx-surgery.md  phoneme-mapping.md
installer/: deploy-models.ps1  download-models.ps1  install.ps1  setup-models.nsi  setup-ort-cuda.nsi  setup-ort-gpu.nsi  setup-ort-openvino.nsi  setup.nsi  uninstall.ps1
scripts/: backbone_surgery.py  build_onnxsim.py  download_models.py  requirements.txt  simplify_models_in_place.py
src/: bridge.rs  lib.rs
src/expander/: dictionary.rs  numbers.rs
src/phonemize/: english.rs  hebrew.rs  letter.rs  lexicon.rs  mod.rs  syllables.rs  utils.rs
src/sapi/: engine.rs  factory.rs  mod.rs  register.rs
src/tts/: config.rs  mod.rs  npz.rs  pipeline.rs  style.rs
tools/: tts_highlight.py
